# life-cycle-assessment-mcp

./: .gitignore  .mcp.json  Dockerfile  Dockerfile.gdt  PLAN_database_backed_processes.md  PLAN_two_stack_architecture.md  VS_CODE_INSTALL.md  build_gdt_server.sh  docker-compose.yaml  docker-compose.yml  gdt_entrypoint.sh  generate_bundles.py  lca_engine.py  lca_search.py  lca_server.py  lca_svg.py  lca_svg_engine.py  pyproject.toml  requirements.txt  setup_olca.sh  sse_server.py  start.sh  start_olca.sh  start_olca_ecoinvent.sh  start_server.sh  stop_olca.sh
.devcontainer/: devcontainer.json  setup-codex.sh
bafu_examples/: cotton_fiber_bafu.yaml  polyester_tshirt_bafu.yaml  wool_yarn_bafu.yaml
case_studies/: cotton_fiber.json  cotton_fiber.md  cotton_fiber.yaml  jacket.json  jacket.md  jacket.yaml  mock_plastic_broom.yaml  plastic_broom.json  plastic_broom.md  polyester_tshirt.json  polyester_tshirt.md  polyester_tshirt.yaml  wool_yarn.json  wool_yarn.md  wool_yarn.yaml
docs/: bafu_database_setup.md  bafu_validation_examples.md  claude_ai_connector_setup.md  llm_rest_api_guide.md  mock_background_database.md  openlca_server_reference.md  python_engine.md  rest_api.md  searchable_background_database.md  setup_bafu_database.md
examples/: plastic_broom.json  plastic_broom.md  plastic_broom.yaml  plastic_broom_euro_vi.yaml  plastic_broom_natureworks_pla.yaml  plastic_broom_rail.yaml
lca_core/: __init__.py  api.py  background_svg.py  engine.py  imported_activity.py  jsonld.py  mock_database.py  models.py  search.py  visualization.py
mock_background/: database.yaml
(+29 files in other folders)
