[project]
name = "lca-mcp"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "numpy",
    "typing-extensions>=4.12",
    "brightway25>=1.0",
    "bw2io>=0.9,<0.10",
    "bw2calc>=2.0",
    "bw2data>=4.0",
]

[project.optional-dependencies]
server = [
    "fastmcp",
    "fastapi",
    "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lca_core*"]
